--- a/overlay/AliothNfc/AndroidManifest.xml
+++ b/overlay/AliothNfc/AndroidManifest.xml
@@ -16,5 +16,6 @@
     <overlay
         android:isStatic="true"
         android:priority="800"
+        android:targetName="NfcCustomization"
         android:targetPackage="com.android.nfc" />
 </manifest>
